--- a/chat/src/main/res/layout/com_crafttalk_chat_item_action.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_action.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     android:id="@+id/item_action"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -12,9 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:paddingTop="12dp"
-        android:paddingBottom="14dp"
+        android:paddingVertical="12dp"
         android:fontFamily="@font/com_crafttalk_chat_ubuntu_medium"
-        android:textFontWeight="600" />
+        android:textFontWeight="600"
+        tools:text="Событие" />
 
 </LinearLayout>
