--- a/chat/src/main/res/layout/com_crafttalk_chat_item_server_union_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_server_union_message.xml
@@ -5,16 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp">
+    android:layout_marginStart="@dimen/com_crafttalk_chat_message_margin_start"
+    android:layout_marginTop="@dimen/com_crafttalk_chat_message_margin_top"
+    android:layout_marginEnd="@dimen/com_crafttalk_chat_message_margin_end"
+    android:layout_marginBottom="@dimen/com_crafttalk_chat_message_margin_bottom">
 
     <include
         android:id="@+id/include_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/com_crafttalk_chat_item_date_message" />
+        layout="@layout/com_crafttalk_chat_include_date_message" />
 
     <View
         android:id="@+id/content_container"
@@ -33,9 +33,9 @@
         android:gravity="start"
         android:fontFamily="@font/com_crafttalk_chat_ubuntu_light"
         android:textFontWeight="300"
-        android:paddingStart="16dp"
-        android:paddingEnd="12dp"
-        android:paddingTop="12dp"
+        android:paddingStart="@dimen/com_crafttalk_chat_message_content_padding_start"
+        android:paddingEnd="@dimen/com_crafttalk_chat_message_content_padding_end"
+        android:paddingTop="@dimen/com_crafttalk_chat_message_content_padding_top"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/include_date"
         tools:text="Hello, my name is Bot" />
@@ -47,8 +47,8 @@
         android:nestedScrollingEnabled="true"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_marginTop="6dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="12dp"
+        android:paddingStart="@dimen/com_crafttalk_chat_message_content_padding_start"
+        android:paddingEnd="@dimen/com_crafttalk_chat_message_content_padding_end"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,8 +68,8 @@
         android:layout_height="1dp"
         android:background="@color/com_crafttalk_chat_gray"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginStart="@dimen/com_crafttalk_chat_message_content_padding_start"
+        android:layout_marginEnd="@dimen/com_crafttalk_chat_message_content_padding_end"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/barrier_content_end"
         app:layout_constraintTop_toBottomOf="@id/actions_list" />
@@ -87,10 +87,24 @@
         tools:layout_width="100dp"
         tools:layout_height="100dp"
         tools:src="@tools:sample/avatars"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/download_file"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/com_crafttalk_chat_download"
+        android:gravity="center"
+        android:padding="8dp"
+        android:layout_marginTop="@dimen/com_crafttalk_chat_download_btn_margin_top"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/server_media"
+        app:layout_constraintEnd_toEndOf="@id/server_media"
+        app:layout_constraintTop_toBottomOf="@id/server_media"
         tools:visibility="gone" />
 
     <include
-        android:id="@+id/include_chat_crafttalk_media_warning"
+        android:id="@+id/server_media_warning"
         android:layout_width="0dp"
         android:layout_height="0dp"
         layout="@layout/com_crafttalk_chat_include_media_warning"
@@ -105,85 +119,38 @@
         tools:visibility="gone" />
 
     <include
-        android:id="@+id/include_chat_crafttalk_file_info"
+        android:id="@+id/file_info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         layout="@layout/com_crafttalk_chat_include_file_info"
+        android:visibility="gone"
         android:layout_marginTop="8dp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@id/border"
         app:layout_constraintEnd_toEndOf="@id/border"
         app:layout_constraintTop_toBottomOf="@id/border"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
+        android:id="@+id/barrier_attach_bottom"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="server_media,include_chat_crafttalk_media_warning,include_chat_crafttalk_file_info" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_file"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:barrierDirection="end"
-        app:constraint_referenced_ids="server_media,include_chat_crafttalk_file_info" />
-
-    <TextView
-        android:id="@+id/download_file"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/com_crafttalk_chat_download"
-        android:gravity="center"
-        android:padding="8dp"
-        android:layout_marginTop="16dp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@id/border"
-        app:layout_constraintEnd_toEndOf="@id/barrier_file"
-        app:layout_constraintTop_toBottomOf="@id/barrier"
-        tools:visibility="gone" />
+        app:constraint_referenced_ids="server_media,download_file,server_media_warning,file_info" />
 
     <View
         android:id="@+id/bottom_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/download_file" />
+        android:layout_marginTop="@dimen/com_crafttalk_chat_message_content_padding_bottom"
+        app:layout_constraintTop_toBottomOf="@id/barrier_attach_bottom" />
 
-    <ImageView
-        android:id="@+id/chat_crafttalk_author_preview"
-        android:layout_width="wrap_content"
+    <include
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        layout="@layout/com_crafttalk_chat_include_server_message_info"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/content_container"
-        tools:src="@drawable/com_crafttalk_chat_ic_operator" />
-
-    <TextView
-        android:id="@+id/chat_crafttalk_author_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
-        android:textFontWeight="600"
-        android:gravity="center_vertical"
-        android:layout_marginStart="4dp"
-        app:layout_goneMarginStart="0dp"
-        app:layout_constraintStart_toEndOf="@id/chat_crafttalk_author_preview"
-        app:layout_constraintTop_toTopOf="@+id/chat_crafttalk_author_preview"
-        app:layout_constraintBottom_toBottomOf="@+id/chat_crafttalk_author_preview"
-        tools:text="Бот" />
-
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
-        android:textFontWeight="600"
-        android:layout_marginStart="4dp"
-        app:layout_constraintStart_toEndOf="@id/chat_crafttalk_author_name"
-        app:layout_constraintTop_toTopOf="@id/chat_crafttalk_author_name"
-        app:layout_constraintBottom_toBottomOf="@id/chat_crafttalk_author_name" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
