--- a/chat/src/main/res/layout/com_crafttalk_chat_item_user_file_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_user_file_message.xml
@@ -5,94 +5,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp">
+    android:layout_marginStart="@dimen/com_crafttalk_chat_message_margin_start"
+    android:layout_marginTop="@dimen/com_crafttalk_chat_message_margin_top"
+    android:layout_marginEnd="@dimen/com_crafttalk_chat_message_margin_end"
+    android:layout_marginBottom="@dimen/com_crafttalk_chat_message_margin_bottom">
 
     <include
         android:id="@+id/include_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/com_crafttalk_chat_item_date_message" />
+        layout="@layout/com_crafttalk_chat_include_date_message" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <View
         android:id="@+id/content_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="15dp"
-        android:paddingTop="13dp"
-        android:paddingEnd="13dp"
-        android:paddingBottom="13dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/include_date">
+        app:layout_constraintTop_toBottomOf="@id/include_date"
+        app:layout_constraintBottom_toTopOf="@id/include_message_status"
+        tools:background="@drawable/com_crafttalk_chat_background_item_simple_user_message" />
 
-        <ImageView
-            android:id="@+id/user_file"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:src="@drawable/com_crafttalk_chat_ic_file"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/user_file_name"
-            app:layout_constraintBottom_toBottomOf="@id/user_file_size" />
-
-        <TextView
-            android:id="@+id/user_file_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxWidth="120dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/user_file"
-            tools:text="name.pdf" />
-
-        <TextView
-            android:id="@+id/user_file_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toEndOf="@id/user_file"
-            app:layout_constraintTop_toBottomOf="@id/user_file_name"
-            tools:text="750 Кб" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/author"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/file_info"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
-        android:textFontWeight="600"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintEnd_toStartOf="@id/time"
-        app:layout_constraintTop_toTopOf="@id/time"
-        app:layout_constraintBottom_toBottomOf="@id/time" />
-
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
-        android:textFontWeight="600"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="4dp"
-        app:layout_goneMarginEnd="0dp"
-        app:layout_constraintTop_toBottomOf="@id/content_container"
-        app:layout_constraintEnd_toStartOf="@id/status" />
-
-    <ImageView
-        android:id="@+id/status"
-        android:layout_width="14dp"
-        android:layout_height="14dp"
+        app:layout_constraintWidth_max="120dp"
+        app:layout_constraintHorizontal_bias="1"
+        layout="@layout/com_crafttalk_chat_include_file_info"
+        android:layout_marginTop="@dimen/com_crafttalk_chat_message_content_padding_top"
+        android:layout_marginEnd="@dimen/com_crafttalk_chat_message_content_padding_end"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/time"
-        app:layout_constraintBottom_toBottomOf="@id/time" />
+        app:layout_constraintTop_toBottomOf="@id/include_date" />
+
+    <View
+        android:id="@+id/border"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="@dimen/com_crafttalk_chat_message_content_padding_start"
+        app:layout_constraintEnd_toStartOf="@id/file_info"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <include
+        android:id="@+id/include_message_status"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        layout="@layout/com_crafttalk_chat_include_user_message_info"
+        android:layout_marginTop="@dimen/com_crafttalk_chat_message_content_padding_bottom"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/file_info" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
