--- a/chat/src/main/res/layout/com_crafttalk_chat_item_user_text_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_user_text_message.xml
@@ -2,71 +2,52 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp">
+    android:layout_marginStart="@dimen/com_crafttalk_chat_message_margin_start"
+    android:layout_marginTop="@dimen/com_crafttalk_chat_message_margin_top"
+    android:layout_marginEnd="@dimen/com_crafttalk_chat_message_margin_end"
+    android:layout_marginBottom="@dimen/com_crafttalk_chat_message_margin_bottom">
 
     <include
         android:id="@+id/include_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/com_crafttalk_chat_item_date_message" />
+        layout="@layout/com_crafttalk_chat_include_date_message" />
 
-    <FrameLayout
+    <View
         android:id="@+id/content_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/include_date">
-
-        <TextView
-            android:id="@+id/user_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:paddingStart="15dp"
-            android:paddingTop="13dp"
-            android:paddingEnd="13dp"
-            android:paddingBottom="13dp"
-            android:fontFamily="@font/com_crafttalk_chat_ubuntu_light"
-            android:textFontWeight="300" />
-
-    </FrameLayout>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/user_message"
+        app:layout_constraintTop_toTopOf="@id/user_message"
+        app:layout_constraintEnd_toEndOf="@id/user_message"
+        app:layout_constraintBottom_toBottomOf="@id/user_message"
+        tools:background="@drawable/com_crafttalk_chat_background_item_simple_user_message" />
 
     <TextView
-        android:id="@+id/author"
+        android:id="@+id/user_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
-        android:textFontWeight="600"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintEnd_toStartOf="@id/time"
-        app:layout_constraintTop_toTopOf="@id/time"
-        app:layout_constraintBottom_toBottomOf="@id/time" />
-
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
-        android:textFontWeight="600"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="4dp"
-        app:layout_goneMarginEnd="0dp"
-        app:layout_constraintTop_toBottomOf="@id/content_container"
-        app:layout_constraintEnd_toStartOf="@id/status" />
-
-    <ImageView
-        android:id="@+id/status"
-        android:layout_width="14dp"
-        android:layout_height="14dp"
+        android:gravity="end"
+        android:fontFamily="@font/com_crafttalk_chat_ubuntu_light"
+        android:textFontWeight="300"
+        android:paddingStart="@dimen/com_crafttalk_chat_message_content_padding_start"
+        android:paddingTop="@dimen/com_crafttalk_chat_message_content_padding_top"
+        android:paddingEnd="@dimen/com_crafttalk_chat_message_content_padding_end"
+        android:paddingBottom="@dimen/com_crafttalk_chat_message_content_padding_bottom"
+        app:layout_constraintTop_toBottomOf="@id/include_date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/time"
-        app:layout_constraintBottom_toBottomOf="@id/time" />
+        tools:text="Привет, мое имя Тест"
+        tools:textColor="@color/com_crafttalk_chat_white" />
+
+    <include
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        layout="@layout/com_crafttalk_chat_include_user_message_info"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
