--- a/chat/src/main/res/layout/com_crafttalk_chat_item_server_file_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_server_file_message.xml
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/border"
+        app:layout_constraintEnd_toEndOf="@id/border_content_end"
         app:layout_constraintTop_toBottomOf="@id/include_date"
         app:layout_constraintBottom_toTopOf="@id/include_message_status"
         tools:background="@drawable/com_crafttalk_chat_background_item_simple_server_message" />
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@id/include_date" />
 
     <View
-        android:id="@+id/border"
+        android:id="@+id/border_content_end"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/com_crafttalk_chat_message_content_padding_end"
