--- a/chat/src/main/res/layout/com_crafttalk_chat_item_user_image_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_user_image_message.xml
@@ -20,10 +20,10 @@
         android:id="@+id/content_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/barrier_start_image"
+        app:layout_constraintStart_toStartOf="@id/barrier_image_start"
         app:layout_constraintTop_toBottomOf="@id/include_date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/barrier_bottom_image"
+        app:layout_constraintBottom_toBottomOf="@id/barrier_image_bottom"
         tools:background="@drawable/com_crafttalk_chat_background_item_simple_user_message" />
 
     <ImageView
@@ -64,21 +64,21 @@
         tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_start_image"
+        android:id="@+id/barrier_image_start"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:barrierDirection="start"
         app:constraint_referenced_ids="user_image,user_image_warning" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_bottom_image"
+        android:id="@+id/barrier_image_bottom"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="user_image,user_image_warning" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_content"
+        android:id="@+id/barrier_content_bottom"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:barrierDirection="bottom"
@@ -90,6 +90,6 @@
         layout="@layout/com_crafttalk_chat_include_user_message_info"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier_content" />
+        app:layout_constraintTop_toBottomOf="@id/barrier_content_bottom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
